--- a/microsetta_interface/server_config.json
+++ b/microsetta_interface/server_config.json
@@ -8,8 +8,5 @@
   "ssl_key_path": null,
   "CAfile": null,
   "authrocket_url": "https://jubilant-smoke-a54b.e2.loginrocket.com",
-  "FLASK_SECRET_KEY": null,
-  "vioscreen_endpoint": "https://demo.vioscreen.com",
-  "vioscreen_regcode": "regcode",
-  "vioscreen_cryptokey": "1234567891011121"
+  "FLASK_SECRET_KEY": null
 }
