Configurable alpha-metric and taxonomy resource

--- a/microsetta_interface/server_config.json
+++ b/microsetta_interface/server_config.json
@@ -2,6 +2,8 @@
   "endpoint": "http://localhost:8083",
   "private_api_endpoint": "http://localhost:8082/api",
   "public_api_endpoint": "http://localhost:8084/results-api",
+  "taxonomy_resource": "greengenes",
+  "alpha_metric": "faith-pd",
   "port": 8083,
   "debug": true,
   "url_scheme": "http",
