--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -598,6 +598,19 @@ paths:
               schema:
                 type: string
 
+  '/admin/emperor_playground':
+    get:
+      operationId: microsetta_interface.implementation.admin_emperor_playground
+      tags:
+        - Admin
+      responses:
+        '200':
+          description: Emperor test page
+          content:
+            text/html:
+              schema:
+                type: string
+
 components:
   parameters:
     account_id: # Can be referenced as '#/components/parameters/account_id'
