Updated config for display of emperor plots

--- a/microsetta_interface/server_config.json
+++ b/microsetta_interface/server_config.json
@@ -2,8 +2,9 @@
   "endpoint": "http://localhost:8083",
   "private_api_endpoint": "http://localhost:8082/api",
   "public_api_endpoint": "http://localhost:8084/results-api",
-  "taxonomy_resource": "greengenes",
-  "alpha_metric": "faith-pd",
+  "taxonomy_resource": "taxonomy",
+  "alpha_metric": "faith_pd",
+  "beta_metric": "unweighted-unifrac",
   "barcode_prefix": "10317.",
   "port": 8083,
   "debug": true,
