Open up an example experimental results page

--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -430,15 +430,11 @@ paths:
               schema:
                 type: string
 
-  '/accounts/{account_id}/sources/{source_id}/samples/{sample_id}/results-experimental':
+  '/results-experimental':
     get:
       operationId: microsetta_interface.implementation.get_sample_results_experimental
       tags:
         - Sample
-      parameters:
-        - $ref: '#/components/parameters/account_id'
-        - $ref: '#/components/parameters/source_id'
-        - $ref: '#/components/parameters/sample_id'
       responses:
         '200':
           description: Display of sample results
