Allow using the experimental results page for regular accounts

--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -430,6 +430,23 @@ paths:
               schema:
                 type: string
 
+  '/accounts/{account_id}/sources/{source_id}/samples/{sample_id}/results-experimental':
+    get:
+      operationId: microsetta_interface.implementation.get_sample_results_experimental_authenticated
+      tags:
+        - Sample
+      parameters:
+        - $ref: '#/components/parameters/account_id'
+        - $ref: '#/components/parameters/source_id'
+        - $ref: '#/components/parameters/sample_id'
+      responses:
+        '200':
+          description: Display of sample results
+          content:
+            text/html:
+              schema:
+                type: string
+
   '/results-experimental':
     get:
       operationId: microsetta_interface.implementation.get_sample_results_experimental
