--- a/microsetta_interface/server_config.json
+++ b/microsetta_interface/server_config.json
@@ -4,7 +4,7 @@
   "public_api_endpoint": "http://localhost:8084/results-api",
   "taxonomy_resource": "taxonomy",
   "alpha_metric": "faith_pd",
-  "beta_metric": "unweighted-unifrac",
+  "beta_metric": "unweighted_unifrac",
   "barcode_prefix": "10317.",
   "port": 8083,
   "debug": true,
