--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2a
+    - uses: actions/checkout@v2
 
     - name: Setup for conda
       uses: conda-incubator/setup-miniconda@v2
