--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,17 @@ jobs:
         auto-update-conda: true
         python-version: 3.7
       
-    - name: exercise
+    - name: Install
+      shell: bash -l {0}
       run: |
         conda create --yes -n test-microsetta-interface python=3.7
         conda activate test-microsetta-interface
         conda install --yes --file ci/conda_requirements.txt
         pip install -r ci/pip_requirements.txt
         pip install -e . --no-deps 
-     
+
+    - name: Test
+      shell: bash -l {0}
+      run: |
+        conda activate test-microsetta-interface
         pytest
