--- a/babel.cfg
+++ b/babel.cfg
@@ -1,4 +1,5 @@
 [python: **.py]
 [jinja2: **/templates/**.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
-
+[jinja2: **/templates/**.jinja2]
+extensions=jinja2.ext.autoescape,jinja2.ext.with_
