Compile on install

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,6 @@ versionfile_source = microsetta_interface/_version.py
 versionfile_build = microsetta_interface/_version.py
 tag_prefix =
 parentdir_prefix = microsetta-interface-
+[compile_catalog]
+directory = microsetta_interface/translations
+use-fuzzy = True
