jquery QueryBuilder conditionals now converted to sql server side rather than in javascript.  Required changing from get to post

--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -767,16 +767,15 @@ paths:
                 type: string
 
   '/admin/barcode_search/query':
-    get:
+    post:
       operationId: microsetta_interface.implementation.admin_barcode_search_query
       tags:
         - Admin
-      parameters:
-        - in: query
-          name: cond
-          description: Sql condition
-          schema:
-            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
       responses:
         '200':
           description: Barcode Search
