--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -784,6 +784,24 @@ paths:
               schema:
                 type: string
 
+  '/admin/barcode_search/query_qiita':
+    post:
+      operationId: microsetta_interface.implementation.admin_barcode_search_query_qiita
+      tags:
+        - Admin
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        '200':
+          description: Barcode Search
+          content:
+            text/html:
+              schema:
+                type: string
+
 
 components:
   parameters:
