Linter wasnt running properly

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
     - name: lint
       run: |
         pip install -q flake8
+        flake8 microsetta_interface
   test:
     runs-on: ubuntu-latest
     steps:
