--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
         pip install -r ci/pip_requirements.txt
         pip install -e . --no-deps
         
-        git clone git@github.com/biocore/microsetta-private-api.git
+        git clone git@github.com:biocore/microsetta-private-api.git
         pushd microsetta-private-api
         pgport=${{ job.services.postgres.ports[5432] }}
         sed -i "s/self.port = 5432/self.port = $pgport/" microsetta_private_api/config_manager.py
