--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -124,6 +124,41 @@ paths:
               schema:
                 type: string
 
+  '/update_address':
+    get:
+      operationId: microsetta_interface.implementation.get_update_address
+      parameters:
+        - in: query
+          name: uid
+          schema:
+            type: string
+        - in: query
+          name: email
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Form to update address
+          content:
+            text/html:
+              schema:
+                type: string
+    post:
+      operationId: microsetta_interface.implementation.post_update_address
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              additionalProperties: true
+      responses:
+        '200':
+          description: Page confirming form submission
+          content:
+            text/html:
+              schema:
+                type: string
+
   '/create_account':
     get:
       operationId: microsetta_interface.implementation.get_create_account
