--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -787,6 +787,29 @@ paths:
               schema:
                 type: string
 
+  '/admin/account_delete':
+    post:
+      operationId: microsetta_interface.implementation.post_account_delete
+      tags:
+        - Admin
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                account_id:
+                  type: string
+                  nullable: false
+      
+      responses:
+        '200':
+          description: Account successfully deleted, redirect to home
+          content:
+            text/html:
+              schema:
+                type: string
+
   '/admin/interested_users':
     get:
       operationId: microsetta_interface.implementation.get_interested_users
